--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+	        	<li><a href="/about">About</a></li
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Mary Joan!</h1>
-				<p>I'm here to help you understand how accessibility works in online learning.<a href="/about">Read more about my life...</a></p>
+				<p>I'm here to help you understand how accessibility works in online learning.
+					<br>
+				<p><a href="/about">Read more about my work.</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 	</body>
