--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Mary Joan!</h1>
-				<p>I'm here to help you understand how accessibility works in online learning.
+        		<h1>Welcome!</h1>
+				<p>I'm Mary. I'm here to help you understand how accessibility works in online learning.
 					<br>
 				<p><a href="/about">Read more about my work.</a></p>
     		</div><!-- /.blurb -->
