--- a/index.html
+++ b/index.html
@@ -1,27 +1,10 @@
 
 
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Accessibility by Mary Joan Z</title>
-		<!--link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome!</h1>
-				<p>I'm Mary. I'm here to help you understand how accessibility works in online learning.
-					<br>
-				<p><a href="/about">Read more about my work.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Welcome!</h1>
+	<p>I'm Mary! I'm here to share accessibility.<a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
