--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Accessibility by Mary
 ---
 <div class="blurb">
 	<h1>Welcome!</h1>
