--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
-
 ---
 layout: default
 title: Accessibility by Mary
 ---
 <div class="blurb">
 	<h1>Welcome!</h1>
-	<p>I'm Mary! I'm here to share accessibility.<a href="/about">Read more about my life...</a></p>
+	<p>I'm Mary! I'm here to share accessibility.
+	<p><a href="/about">Read more about my work.</a></p>
 </div><!-- /.blurb -->
